@@ -119,6 +119,17 @@ The following configuration options are available:
     <propertyName>value</propertyName>
 </systemPropertyVariables>
 ----
+`<runtimeArgs>`::
+To specify runtime arguments used for a native image run, use:
+[source,xml, role="multi-language-sample"]
+----
+<runtimeArgs>
+    <runtimeArg>-XX:MissingRegistrationReportingMode=Warn</runtimeArg>
+</runtimeArgs>
+----
+
+This parameter is only valid for the Maven Goal of `test`.
+
 `<jvmArgs>`::
    To specify JVM arguments used for a native image build, use:
 [source,xml, role="multi-language-sample"]
